unpackaged/objects/sfcma__Transaction__c.object
<CustomObject>
    <description>Contains information about a customer payment attempt. For example, method of payment and whether it was successful.</description>
    <fields>
        <fullName>sfcma__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>purchase</fullName>
                </value>
                <value>
                    <fullName>authorization</fullName>
                </value>
                <value>
                    <fullName>refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__AddressCity__c</fullName>
        <label>Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__AddressCountry__c</fullName>
        <label>Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__AddressLine1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__AddressState__c</fullName>
        <label>Address State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__AddressZipCode__c</fullName>
        <label>Address Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__CreatedAt__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__FailureCode__c</fullName>
        <label>Failure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>sfcma__Invoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfcma__IsRefunded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refunded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfcma__MethodOfPayment__c</fullName>
        <label>Method of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>SEPA</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__RefundAmount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sfcma__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>success</fullName>
                </value>
                <value>
                    <fullName>failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__StripeChargeIdUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Stripe Charge Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfcma__StripeChargeId__c</fullName>
        <externalId>true</externalId>
        <label>Stripe Charge Id (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__StripeInvoiceId__c</fullName>
        <label>Stripe Invoice Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>sfcma__Subscription__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfcma__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sfcma__VATNumber__c</fullName>
        <description>VAT Number of the Transaction&apos;s Subscription.</description>
        <formula>sfcma__Subscription__r.sfcma__VATNumber__c</formula>
        <label>VAT Number</label>
        <type>Text</type>
    </fields>
    <label>Checkout Transaction</label>
    <listViews>
        <fullName>sfcma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRANS-{000000}</displayFormat>
        <label>Checkout Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>